--- a/products.html
+++ b/products.html
@@ -68,10 +68,10 @@
               Services
             </a>
             <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-              <li><a class="dropdown-item" href="#">Web Development</a></li>
-              <li><a class="dropdown-item" href="#">Mobile Apps</a></li>
-              <li><a class="dropdown-item" href="#">Cloud Solutions</a></li>
-              <li><a class="dropdown-item" href="#">IT Consulting</a></li>
+              <li><a class="dropdown-item" href="">IT Solutions</a></li>
+              <li><a class="dropdown-item" href="">Printer Services</a></li>
+              <li><a class="dropdown-item" href="">Security Solution</a></li>
+              <li><a class="dropdown-item read-moretext" href="service.html">Read More</a></li>
             </ul>
           </div>
         </div>
@@ -166,15 +166,12 @@
         </div>
 
         <div class="col-lg-6">
+          <h1 class="section-title text-start"><b>Empowering Businesses with Innovative <span>Technology</span> Solutions</b></h1>
           <p class="about-content">
-            The proliferation of advanced devices are revolutionizing the way we
-            approach productivity and streamline workflows.
+            In today’s fast-paced digital landscape, businesses require smart, reliable, and scalable solutions to stay ahead.
           </p>
           <p class="about-content">
-            The surge in advanced devices is reshaping productivity and workflow
-            approaches. By seamlessly integrating technology, we're fostering
-            collaboration, creativity, and efficiency, propelling customers to
-            the forefront of this transformative revolution.
+            Our product offerings are designed to meet the evolving needs of modern enterprises by integrating cutting-edge IT infrastructure, dynamic digital marketing tools, and advanced printing technologies—all under one roof.
           </p>
         </div>
       </div>
@@ -198,11 +195,11 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title text-start">
-                <b>Printer</b>
+                <b>Printer Services</b>
               </h5>
               <p class="card-text mt-2">
                 <xl class="text-dark"
-                  >Lorem ipsum dolor sit amet,  consectetur adipiscing elit.</xl
+                  >Affordable printer rentals, brand-new sales, and AMC support. Reliable solutions for all your printing needs.</xl
                 >
               </p> 
          
@@ -227,11 +224,11 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title text-start">
-                <b>Printer</b>
+                <b>Consumable Sales</b>
               </h5>
               <p class="card-text mt-2">
                 <xl class="text-dark"
-                  >Lorem ipsum dolor sit amet,  consectetur adipiscing elit.</xl
+                  >Genuine printer consumables including toner, ink, and cartridges. High-quality supplies for all major brands.</xl
                 >
               </p> 
          
@@ -256,11 +253,11 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title text-start">
-                <b>CCTV</b>
+                <b>CCTV Solutions</b>
               </h5>
               <p class="card-text mt-2">
                 <xl class="text-dark"
-                  >Lorem ipsum dolor sit amet,  consectetur adipiscing elit.</xl
+                  >Advanced CCTV systems for Business and home security. HD surveillance with remote monitoring and 24/7 protection.</xl
                 >
               </p> 
 
@@ -286,11 +283,11 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title text-start">
-                <b>Biometrics</b>
+                <b>Biometric Systems</b>
               </h5>
               <p class="card-text mt-2">
                 <xl class="text-dark"
-                  >Lorem ipsum dolor sit amet,  consectetur adipiscing elit.</xl
+                  >Smart fingerprint and facial recognition solutions. Secure access control and attendance tracking for businesses.</xl
                 >
               </p> 
 
@@ -320,11 +317,11 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title text-start">
-                <b>Plotter</b>
+                <b>Network & Software Solutions</b>
               </h5>
               <p class="card-text mt-2">
                 <xl class="text-dark"
-                  >Lorem ipsum dolor sit amet,  consectetur adipiscing elit.</xl
+                  >Complete IT solutions including networking, system setup, and custom software. Boost performance with secure, scalable tech.</xl
                 >
               </p> 
              <a href="" class="btn btn-explore text-white text-start mt-1">
@@ -351,11 +348,11 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title text-start">
-                <b>Laptop</b>
+                <b>SEO Services</b>
               </h5>
               <p class="card-text mt-2">
                 <xl class="text-dark"
-                  >Lorem ipsum dolor sit amet,  consectetur adipiscing elit.</xl
+                  >Boost your website’s visibility on Google with expert SEO. Drive organic traffic and grow your online presence.</xl
                 >
               </p> 
               <a href="" class="btn btn-explore text-white text-start mt-1">
@@ -381,11 +378,11 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title text-start">
-                <b>Digital Panel</b>
+                <b>Social Media Management</b>
               </h5>
               <p class="card-text mt-2">
-                <xl class="text-dark"
-                  >Lorem ipsum dolor sit amet,  consectetur adipiscing elit.</xl
+                <xl class="text-dark" style="line-break: anywhere;"
+                  >Professional Social Media Management to grow your brand online.Boost engagement, followers, and conversions with expert strategies</xl
                 >
               </p> 
               <a href="" class="btn btn-explore text-white text-start mt-1">
@@ -412,11 +409,11 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title text-start">
-                <b>Telecom</b>
+                <b>Web Development</b>
               </h5>
               <p class="card-text mt-2">
                 <xl class="text-dark"
-                  >Lorem ipsum dolor sit amet,  consectetur adipiscing elit.</xl
+                  >Professional web development tailored to your goals.Mobile-friendly, SEO-optimized, and built for performance.</xl
                 >
               </p> 
               <a href="" class="btn btn-explore text-white text-start mt-1">
@@ -454,16 +451,17 @@
       <div class="news-padding">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6">
-            <a href="index.html"><img
-              src="images/logo/logo2.png"
-              alt="IT Solutions Company Footer Logo"
-              height="70"
-              class="mb-3"
-            /></a> 
+            <a href="index.html"
+              ><img
+                src="images/logo/logo2.png"
+                alt="IT Solutions Company Footer Logo"
+                height="70"
+                class="mb-3"
+            /></a>
             <p class="footer-text">
-              Al Katef IT Solutions is a global IT solutions <br />
-              company based UAE, with over 20 years experience in IT service,
-              printer service, digital marketing.
+              Al Katef IT Solutions is a global technology partner based in the
+              UAE, offering over 23 years of excellence in IT services, printer
+              management, and digital marketing tailored to client success
             </p>
           </div>
           <div class="col-lg-2 col-md-6">
@@ -481,9 +479,9 @@
             <ul class="list-unstyled footer-links">
               <li><a href="#">Web Development</a></li>
               <li><a href="#">IT Consulting</a></li>
-              <li><a href="#">Cloud Solutions</a></li>
+              <li><a href="#">Network Solutions</a></li>
               <li><a href="#">Cybersecurity</a></li>
-              <li><a href="#">App Development</a></li>
+              <li><a href="#">Printer Services</a></li>
             </ul>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -504,11 +502,15 @@
                 ><a href="tel:+971556449916"
                   ><b class="text-dark">+971 55 644 9916</b></a
                 >
+                <b> , </b>
+                <a href="tel:+97125524336"
+                  ><b class="text-dark">+971 25 524 336</b></a
+                >
               </li>
               <li>
                 <i class="fas fa-envelope me-2 mt-2"></i
-                ><a href="mailto:sales@itsolutions4u.co"
-                  ><b class="text-dark">sales@itsolutions4u.co</b></a
+                ><a href="mailto:sales@alkatefitsolutions.ae"
+                  ><b class="text-dark">sales@alkatefitsolutions.ae</b></a
                 >
               </li>
             </ul>
