--- a/about.html
+++ b/about.html
@@ -66,10 +66,10 @@
               Services
             </a>
             <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-              <li><a class="dropdown-item" href="#">Web Development</a></li>
-              <li><a class="dropdown-item" href="#">Mobile Apps</a></li>
-              <li><a class="dropdown-item" href="#">Cloud Solutions</a></li>
-              <li><a class="dropdown-item" href="#">IT Consulting</a></li>
+              <li><a class="dropdown-item" href="">IT Solutions</a></li>
+              <li><a class="dropdown-item" href="">Printer Services</a></li>
+              <li><a class="dropdown-item" href="">Security Solution</a></li>
+              <li><a class="dropdown-item read-moretext" href="service.html">Read More</a></li>
             </ul>
           </div>
         </div>
@@ -387,17 +387,17 @@
       <div class="news-padding">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6">
-            <a href="index.html"><img
-              src="images/logo/logo2.png"
-              alt="IT Solutions Company Footer Logo"
-              height="70"
-              class="mb-3"
-            /></a> 
-
+            <a href="index.html"
+              ><img
+                src="images/logo/logo2.png"
+                alt="IT Solutions Company Footer Logo"
+                height="70"
+                class="mb-3"
+            /></a>
             <p class="footer-text">
-              Al Katef IT Solutions is a global IT solutions <br />
-              company based UAE, with over 20 years experience in IT service,
-              printer service, digital marketing.
+              Al Katef IT Solutions is a global technology partner based in the
+              UAE, offering over 23 years of excellence in IT services, printer
+              management, and digital marketing tailored to client success
             </p>
           </div>
           <div class="col-lg-2 col-md-6">
@@ -415,9 +415,9 @@
             <ul class="list-unstyled footer-links">
               <li><a href="#">Web Development</a></li>
               <li><a href="#">IT Consulting</a></li>
-              <li><a href="#">Cloud Solutions</a></li>
+              <li><a href="#">Network Solutions</a></li>
               <li><a href="#">Cybersecurity</a></li>
-              <li><a href="#">App Development</a></li>
+              <li><a href="#">Printer Services</a></li>
             </ul>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -438,11 +438,15 @@
                 ><a href="tel:+971556449916"
                   ><b class="text-dark">+971 55 644 9916</b></a
                 >
+                <b> , </b>
+                <a href="tel:+97125524336"
+                  ><b class="text-dark">+971 25 524 336</b></a
+                >
               </li>
               <li>
                 <i class="fas fa-envelope me-2 mt-2"></i
-                ><a href="mailto:sales@itsolutions4u.co"
-                  ><b class="text-dark">sales@itsolutions4u.co</b></a
+                ><a href="mailto:sales@alkatefitsolutions.ae"
+                  ><b class="text-dark">sales@alkatefitsolutions.ae</b></a
                 >
               </li>
             </ul>
