home hero section image updated

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <!-- Right Image -->
           <div class="text-center">
             <img
-              src="images/hero/hero.png"
+              src="images/hero/hero-img.png"
               class="img-fluid mt-2"
               alt="IT Professionals collaborating"
             />
