--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,9 @@
               Services
             </a>
             <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-              <li><a class="dropdown-item" href="">IT Solutions</a></li>
-              <li><a class="dropdown-item" href="">Printer Services</a></li>
-              <li><a class="dropdown-item" href="">Security Solution</a></li>
+              <li><a class="dropdown-item" href="service.html">IT Solutions</a></li>
+              <li><a class="dropdown-item" href="service.html">Printer Services</a></li>
+              <li><a class="dropdown-item" href="service.html">Security Solution</a></li>
               <li><a class="dropdown-item read-moretext" href="service.html">Read More</a></li>
             </ul>
           </div>
