--- a/service.html
+++ b/service.html
@@ -68,9 +68,9 @@
                 Services
               </a>
               <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                <li><a class="dropdown-item" href="">IT Solutions</a></li>
-                <li><a class="dropdown-item" href="">Printer Services</a></li>
-                <li><a class="dropdown-item" href="">Security Solution</a></li>
+                <li><a class="dropdown-item" href="service.html">IT Solutions</a></li>
+                <li><a class="dropdown-item" href="service.html">Printer Services</a></li>
+                <li><a class="dropdown-item" href="service.html">Security Solution</a></li>
                 <li><a class="dropdown-item read-moretext" href="service.html">Read More</a></li>
               </ul>
             </div>
@@ -291,7 +291,7 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">
-                <b>AMC – Printer & IT Solutions</b>
+                <b>AMC – Printer & IT </b>
               </h5>
               <p class="card-text mt-2">
                 <xl class="text-muted"
