--- a/about.html
+++ b/about.html
@@ -40,21 +40,23 @@
 
    <div class="pagesection-top">
 
-    <nav class="navbar navbar-expand-lg navbar-page ">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-page">
+      <div class="nav-padding">
         <!-- Logo + Services -->
         <div class="d-flex align-items-center me-3">
-          <a class="navbar-brand d-flex align-items-center me-3" href="index.html">
+          <a
+            class="navbar-brand d-flex align-items-center me-3"
+            href="index.html"
+          >
             <img
               src="images/logo/logo_1.png"
               alt="IT Solutions Logo"
-              class="rounded"
-              height="40"
+              height="54"
             />
           </a>
 
           <!-- Services Dropdown -->
-          <div class="nav-item dropdown me-3">
+          <!-- <div class="nav-item dropdown me-3">
             <a
               class="btn dropdown-toggle text-white px-3 py-2 rounded"
               href="#"
@@ -71,7 +73,7 @@
               <li><a class="dropdown-item" href="service.html">Security Solution</a></li>
               <li><a class="dropdown-item read-moretext" href="service.html">Read More</a></li>
             </ul>
-          </div>
+          </div> -->
         </div>
 
         <!-- Toggle Button for Mobile -->
@@ -92,7 +94,7 @@
             class="d-flex flex-column flex-lg-row align-items-center align-items-lg-center w-100"
           >
             <!-- Search Form -->
-            <form class="d-flex w-100 me-lg-3 mb-3 mb-lg-0">
+            <!-- <form class="d-flex w-100 me-lg-3 mb-3 mb-lg-0">
               <div class="input-group custom-search w-100">
                 <span class="input-group-text"
                   ><i class="fas fa-search"></i
@@ -103,7 +105,7 @@
                   placeholder="Enter your search"
                 />
               </div>
-            </form>
+            </form> -->
 
             <!-- Nav Links -->
             <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0 align-items-center">
@@ -115,18 +117,46 @@
                   >Products</a
                 >
               </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle fw-semibold"
+                  href="#"
+                  id="servicesDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Services
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                  <li>
+                    <a class="dropdown-item" href="it-solution.html"
+                      >IT Solutions</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="printer-service.html"
+                      >Printer Services</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="digital-marketing.html"
+                      >Digital Marketing</a
+                    >
+                  </li>
+                </ul>
+              </li>
               <li class="nav-item">
                 <a class="nav-link fw-semibold" href="#">FAQ</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-semibold" href="contact.html"
-                  >Contact<span style="color: #cf2a01">_</span>Us</a
+                  >Contact Us</a
                 >
               </li>
             </ul>
           </div>
         </div>
-
       </div>
     </nav>
 
