Digital Marketing service section styles updated

--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
                   >Contact Us</a
                 >
               </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-light" href="tel:+971556449916"
+                  ><b>Call Now</b></a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -167,27 +172,15 @@
               We Build the Future of <br />
               Business Through Technology
             </h1>
-            <p class="lead mb-5">
+            <p class="lead mb-4">
               From startups to enterprises, we deliver scalable IT solutions in
               UAE, digital marketing, <br />
               and on-demand tech rentals that drive real results—fast, secure,
               and future-ready.
             </p>
 
-            <div class="d-flex flex-column gap-3 align-items-start">
-              <div class="input-group custom-search">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Enter your e-mail here"
-                />
-              </div>
-              <input
-                type="button"
-                class="btn btn-dark hero-input-btn"
-                value="Subscribe"
-              />
-            </div>
+            <a href="contact.html" class="btn btn-light">Explore More</a>
+
           </div>
 
           <!-- Right Image -->
@@ -198,6 +191,13 @@
               alt="IT Professionals collaborating"
             />
           </div>
+
+          <div class="whatsapp">
+            <a href="https://wa.me/971556449916?text=Hi" target="_blank">
+              <img src="images/hero/WhatsApp.svg.webp" alt="Chat on WhatsApp">
+            </a>
+          </div>
+          
         </div>
       </div>
     </section>
