--- a/service.html
+++ b/service.html
@@ -109,6 +109,9 @@
               <!-- Nav Links -->
               <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0 align-items-center">
                 <li class="nav-item">
+                  <a class="nav-link fw-semibold" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link fw-semibold" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
@@ -146,11 +149,13 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link fw-semibold" href="#">FAQ</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link fw-semibold" href="contact.html"
                     >Contact Us</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-light" href="tel:+971556449916"
+                    ><b>Call Now</b></a
                   >
                 </li>
               </ul>
