--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
             <!-- Nav Links -->
             <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0 align-items-center">
               <li class="nav-item">
+                <a class="nav-link fw-semibold" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link fw-semibold" href="about.html">About</a>
               </li>
               <li class="nav-item">
@@ -141,9 +144,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link fw-semibold" href="#">FAQ</a>
-              </li>
+             
               <li class="nav-item">
                 <a class="nav-link fw-semibold" href="contact.html"
                   >Contact Us</a
@@ -197,7 +198,7 @@
               <img src="images/hero/WhatsApp.svg.webp" alt="Chat on WhatsApp">
             </a>
           </div>
-          
+
         </div>
       </div>
     </section>
