--- a/products.html
+++ b/products.html
@@ -221,7 +221,7 @@
         <div class="col-md-6 col-lg-3">
           <article class="card news-card h-90 border-0">
             <img
-              src="images/products/product1.jpg"
+              src="images/products/p1.png"
               class="card-img-top"
               alt="Abstract technology background"
             />
@@ -250,7 +250,7 @@
         <div class="col-md-6 col-lg-3">
           <article class="card news-card h-90 border-0">
             <img
-              src="images/products/product2.jpg"
+              src="images/products/p2.png"
               class="card-img-top"
               alt="Abstract technology background"
             />
@@ -279,7 +279,7 @@
         <div class="col-md-6 col-lg-3">
           <article class="card news-card h-90 border-0">
             <img
-              src="images/products/product3.jpg"
+              src="images/products/p3.png"
               class="card-img-top"
               alt="Abstract technology background"
             />
@@ -343,7 +343,7 @@
         <div class="col-md-6 col-lg-3">
           <article class="card news-card h-90 border-0">
             <img
-              src="images/products/product5.jpg"
+              src="images/products/p5.png"
               class="card-img-top"
               alt="Abstract technology background"
             />
@@ -374,7 +374,7 @@
         <div class="col-md-6 col-lg-3">
           <article class="card news-card h-90 border-0">
             <img
-              src="images/products/product6.jpg"
+              src="images/products/p6.png"
               class="card-img-top"
               alt="Abstract technology background"
             />
@@ -404,7 +404,7 @@
         <div class="col-md-6 col-lg-3">
           <article class="card news-card h-90 border-0">
             <img
-              src="images/products/product7.jpg"
+              src="images/products/p7.png"
               class="card-img-top"
               alt="Abstract technology background"
             />
@@ -435,7 +435,7 @@
 
           <article class="card news-card h-90 border-0">
             <img
-              src="images/products/product8.jpg"
+              src="images/products/p8.png"
               class="card-img-top"
               alt="Abstract technology background"
             />
